[gd_scene load_steps=3 format=3 uid="uid://blf82y3rvycnd"]

[ext_resource type="Texture2D" path="res://o.png" id="1_oa6ar"]
[ext_resource type="Script" path="res://piece.gd" id="2_kpaxr"]

[node name="Piece" type="Sprite2D"]
scale = Vector2(2, 2)
texture = ExtResource("1_oa6ar")
script = ExtResource("2_kpaxr")

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
